# wasm-fluid-sim

./: CMakeLists.txt  README.md  build_all.py
assets/shaders/gles100/: screen.vs
assets/shaders/gles300/: basic.vs  instanced.vs
build_wasm/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
build_wasm/assets/shaders/gles300/: instanced.fs
build_wasm/emscripten/assets/shaders/: particle_post.fs
build_wasm/emscripten/assets/shaders/gles100/: screen.fs
build_wasm/emscripten/assets/shaders/gles300/: basic.fs  screen.vs
build_wasm/html/: imgui_sdl.html  imgui_sdl.js  imgui_sdl.wasm  main_sim_sdl.html  main_sim_sdl.js  main_sim_sdl.wasm
build_wasm/html/assets/: xn_particle_config.json
src/: imgui_sdl.cpp  main_sim_glfw.cpp  main_sim_sdl.cpp  xn_hash.hpp  xn_particles.hpp
xnlib/graphics/: shader.h  xn_gl.hpp  xn_glfw.hpp  xn_log.hpp  xn_sdl.hpp  xn_texture.hpp  xn_vertex_arrays.hpp
xnlib/util/: xn_json.hpp
